# Genetic_Model_Tuner

./: .gitignore  EZMT.py  README.md  config_validation.py  organism.py  pyproject.toml  test.py  test_outline.md  test_outline.txt
ezmt/: config_validation.py  hyperparameters.py  model_tuner.py  organism.py
tests/unit/: EZMT_unit_test.py  config_validation_unit_test.py
