[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ez-model-tuner"
version = "0.1.0"
description = "A tool to optimize hyperparameters of a data analysis pipeline through a genetic algorithm."
authors = [
    { name = "Kenneth Bassett", email = "bassettkennethj@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn"
]

[project.urls]
homepage = "https://github.com/kjbassett/Genetic_Model_Tuner"
repository = "https://github.com/kjbassett/Genetic_Model_Tuner"
documentation = "https://github.com/kjbassett/Genetic_Model_Tuner"

[tool.setuptools.packages.find]
where = ["."]